--- a/app/scorecard/scorecard.css
+++ b/app/scorecard/scorecard.css
@@ -51,6 +51,7 @@
 	height: calc(100vw / 6);
 	display: table;
 	font-size: calc(100vw / 6 * 0.25);
+	z-index: -1; /*Put it below gradient*/
 }
 
 .scoreSpanner {
@@ -109,7 +110,6 @@ s
 	position: absolute;
 	top: calc(75px + 100vw / 6);
 	left: 0;
-	z-index: 10;
 	display: none;
 	pointer-events: none;
 }
@@ -124,6 +124,5 @@ s
 	position: absolute;
 	top: calc(100vh - 2 * (100vw / 6) - 1px);
 	left: 0;
-	z-index: 10;
 	pointer-events: none;
 }
